# switcher

./: .gitignore  README.md  buttons.jsonc  com.github.jeysonflores.switcher.yml  meson.build
.github/workflows/: main.yml
data/: assets.gresource.xml  com.github.jeysonflores.switcher.appdata.xml  com.github.jeysonflores.switcher.desktop  com.github.jeysonflores.switcher.gschema.xml  meson.build  style-dark.css  style.css
src/: MainWindow.vala  Switcher.vala
src/Utils/: ContractorManager.vala  PortalManager.vala
src/Views/: DarkModeView.vala  LightModeView.vala  ModeView.vala
src/Widgets/: SettingsDialog.vala
